--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -11,7 +11,7 @@ jobs:
       - name: build (vs 2022)
         shell: cmd
         run: |
-          call "C:\Program Files (x86)\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
+          call "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvarsall.bat" x64
           build raddbg msvc debug
           build raddbg_from_pdb msvc debug
           build raddbg_from_dwarf msvc debug
@@ -21,7 +21,7 @@ jobs:
       - name: build (vs 2019)
         shell: cmd
         run: |
-          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
+          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvarsall.bat" x64
           build raddbg msvc debug
           build raddbg_from_pdb msvc debug
           build raddbg_from_dwarf msvc debug
@@ -31,7 +31,7 @@ jobs:
       - name: build (vs 2017)
         shell: cmd
         run: |
-          call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
+          call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvarsall.bat" x64
           build raddbg msvc debug
           build raddbg_from_pdb msvc debug
           build raddbg_from_dwarf msvc debug
