--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -1,10 +1,18 @@
 name: builds
 
-on: [push, pull_request]
+on:
+  push:
+    paths-ignore:
+      - '**.md'
+  pull_request:
+    paths-ignore:
+      - '**.md'
 
 jobs:
   build-windows-2022:
     runs-on: windows-2022
+    strategy:
+      fail-fast: false
     steps:
       - name: checkout
         uses: actions/checkout@v2
