--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -21,10 +21,10 @@ jobs:
         run: |
           call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
           call build raddbg msvc debug              || exit /b 1
-          call build raddbgi_from_pdb msvc debug    || exit /b 1
-          call build raddbgi_from_dwarf msvc debug  || exit /b 1
-          call build raddbgi_dump msvc debug        || exit /b 1
+          call build rdi_from_pdb msvc debug        || exit /b 1
+          call build rdi_from_dwarf msvc debug      || exit /b 1
+          call build rdi_dump msvc debug            || exit /b 1
           call build raddbg clang debug             || exit /b 1
-          call build raddbgi_from_pdb clang debug   || exit /b 1
-          call build raddbgi_from_dwarf clang debug || exit /b 1
-          call build raddbgi_dump clang debug       || exit /b 1
+          call build rdi_from_pdb clang debug       || exit /b 1
+          call build rdi_from_dwarf clang debug     || exit /b 1
+          call build rdi_dump clang debug           || exit /b 1
