updated git actions

--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -28,3 +28,5 @@ jobs:
           call build rdi_from_pdb clang debug       || exit /b 1
           call build rdi_from_dwarf clang debug     || exit /b 1
           call build rdi_dump clang debug           || exit /b 1
+          call build radlink msvc debug             || exit /b 1
+          call build radlink clang debug            || exit /b 1
