--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -20,13 +20,15 @@ jobs:
         shell: cmd
         run: |
           call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
-          call build raddbg msvc debug              || exit /b 1
-          call build rdi_from_pdb msvc debug        || exit /b 1
-          call build rdi_from_dwarf msvc debug      || exit /b 1
-          call build rdi_dump msvc debug            || exit /b 1
-          call build raddbg clang debug             || exit /b 1
-          call build rdi_from_pdb clang debug       || exit /b 1
-          call build rdi_from_dwarf clang debug     || exit /b 1
-          call build rdi_dump clang debug           || exit /b 1
-          call build radlink msvc debug             || exit /b 1
-          call build radlink clang debug            || exit /b 1
+          call build raddbg msvc debug                 || exit /b 1
+          call build raddbg clang debug                || exit /b 1
+          call build rdi_from_pdb msvc debug           || exit /b 1
+          call build rdi_from_pdb clang debug          || exit /b 1
+          call build rdi_from_dwarf msvc debug         || exit /b 1
+          call build rdi_from_dwarf clang debug        || exit /b 1
+          call build rdi_dump msvc debug               || exit /b 1
+          call build rdi_dump clang debug              || exit /b 1
+          call build radlink msvc debug                || exit /b 1
+          call build radlink clang debug               || exit /b 1
+          call build rdi_breakpad_from_pdb msvc debug  || exit /b 1
+          call build rdi_breakpad_from_pdb clang debug || exit /b 1
