eliminate standalone programs for pdb -> rdi; dwarf -> rdi; pdb -> breakpad; sketch out 'radbin', unified cli frontend for dumping/converting/etc., plug in pdb -> rdi, pdb -> breakpad, & stub out dumper/dwarf

--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -17,9 +17,7 @@ jobs:
         target:
           - raddbg
           - radlink
-          - rdi_from_pdb
-          - raddump
-          - rdi_breakpad_from_pdb
+          - radbin
         compiler:
           - msvc
           - clang
