--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -3,10 +3,10 @@ name: builds
 on:
   push:
     paths-ignore:
-      - '**.md'
+      - "**.md"
   pull_request:
     paths-ignore:
-      - '**.md'
+      - "**.md"
 
 jobs:
   build-windows-2022:
@@ -32,6 +32,36 @@ jobs:
         run: |
           call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
           call build "${{ matrix.target }}" "${{ matrix.compiler }}" "${{ matrix.mode }}" || exit /b 1
+
+  build-ubuntu:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        target:
+          - raddbg
+          # - radlink TODO
+          # - rdi_from_pdb TODO
+          # - rdi_from_dwarf TODO
+          # - rdi_breakpad_from_pdb TODO
+          - ryan_scratch
+        compiler:
+          - gcc
+          - clang
+        mode:
+          - debug
+          - release
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential clang libx11-dev libxext-dev libfreetype-dev libglu1-mesa-dev freeglut3-dev mesa-common-dev
+
+      - name: build (ubuntu)
+        run: |
+          bash build.sh ${{ matrix.target }} ${{ matrix.compiler }} ${{ matrix.mode }}
 
   run-torture:
     runs-on: windows-2022
