--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential clang libx11-dev libxext-dev libfreetype-dev libglu1-mesa-dev freeglut3-dev mesa-common-dev
+          sudo apt-get install -y build-essential clang libx11-dev libxext-dev libfreetype-dev libgl-dev libegl-dev
 
       - name: build (ubuntu)
         run: |
